Bugfix: Use a light shadow
The commit a50927bd20d4b5d8d9b7e36662617b5372d4cb7e accidentaly replaced one text shadow that should not have been replaced.
This resulted in unreadable text.

--- a/sites/all/themes/genesis/genesis_mcneese/css/layout.css
+++ b/sites/all/themes/genesis/genesis_mcneese/css/layout.css
@@ -237,7 +237,7 @@ div.block-menu.block-sidebar-first ul.menu li a:visited {
   display: block;
   color: #393939;
   text-decoration: none;
-  text-shadow: 1px 1px 0 #2f2f2f;
+  text-shadow: 1px 1px 0 #eeeeee;
   line-height: 1.7;
 
   padding: 2px 2px 2px 8px;
